# shield-llm

./: .dvcignore  .gitignore  dvc.yaml  extract_test_set.py  params.yaml  pyproject.toml  qwen3_2B_finetuning_v3_runpod.ipynb  sanity_check.py  split_dataset.py
configs/experiments/: qwen3vl_2b_lora_early_stopping.toml  qwen3vl_2b_qlora.toml  qwen3vl_2b_qlora_early_stopping.toml  qwen3vl_2b_zero_shot_baseline.toml
data/: dataset_filtrato.csv.dvc
data/images/: images_normalized.dvc
notebooks/: 00_qwen3vl_2b_zero_shot_baseline.ipynb  10_qwen3vl_2b_qlora_early_stopping.ipynb  11_qwen3vl_2b_lora_early_stopping.ipynb  20_evaluate_best_checkpoints.ipynb  README.md  qwen3_2B_finetuning_v3_runpod.ipynb
scripts/data/: extract_test_set.py  sanity_check.py  split_dataset.py
scripts/dev/: main.py
scripts/evaluation/: evaluate_best_checkpoints.py
scripts/mlflow/: log_run_to_mlflow.py
src/shield/: __init__.py  notebook_utils.py  tracking.py
