[project]
name = "shield"
version = "0.1.0"
description = "Fine-tuning and experiment tracking workflow for SHIELD"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bert-score>=0.3.13",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "dvc>=3.67.1",
    "jupyter>=1.1.1",
    "mlflow>=3",
    "pandas>=2.2,<3",
    "peft>=0.18.1",
    "pillow>=12.1.1",
    "qwen-vl-utils>=0.0.14",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.8.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "trl>=0.29.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.6",
    "notebook>=7.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shield"]
